[package]
name = "assembler"
version = "0.3.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
wasm-bindgen = "0.2.92"
fs = { git = "https://github.com/ICMC-IDE/fs.git" }
mif = { git = "https://github.com/ICMC-IDE/mif.git" }
serde_derive = "1.0.204"
toml = "0.8.19"
serde = "1.0.204"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
