[package]
name = "assembler"
version = "0.3.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "assembler"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
fs = { git = "https://github.com/ICMC-IDE/fs.git" }
mif = { git = "https://github.com/ICMC-IDE/mif.git" }
serde_derive = "1.0.204"
toml = "0.8.19"
serde = "1.0.204"
clap = { version = "4.5.26", features = ["derive"], optional = true }
clio = { version = "0.3.5", features = ["clap-parse"], optional = true }

[features]
cli = ["clap", "clio"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.92"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
