[package]
name = "assembler"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "assembler"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
pest = "2.8.3"
pest_derive = "2.8.3"
mif = { git = "https://github.com/ICMC-IDE/mif.git" }
serde_derive = "1.0.228"
toml = "0.9.7"
serde = "1.0.228"
clap = { version = "4.5.48", features = ["derive"], optional = true }
clio = { version = "0.3.5", features = ["clap-parse"], optional = true }

[features]
cli = ["clap", "clio"]

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
